Fixes form underline alignment at 1200px breakpoint

--- a/main/src/main/js/launch/src/components/Select/select.css
+++ b/main/src/main/js/launch/src/components/Select/select.css
@@ -8,13 +8,7 @@
 }
 
 .select-wrapper label + .MuiInput-formControl {
-    margin-top: 21px;
-}
-
-@media only screen and (max-width: 1200px) {
-    .select-wrapper label + .MuiInput-formControl {
-        margin-top: 19px;
-    }
+    margin-top: 19px;
 }
 
 .MuiFormControl-root {
